syntax = "proto3";

// import "google/protobuf/empty.proto";
// import "google/protobuf/timestamp.proto";

package chat;

option go_package = "./";

service HelloGrpc {
    rpc GreetServer (GreetRequest) returns (GreetMessage) {}
    // rpc GetMessageStream (google.protobuf.Empty) returns (stream GetMessageStreamResponse);
    // rpc CreateMessage (CreateMessageRequest) returns (CreateMessageResponse);
}

message GreetRequest {
    string name = 1;
}
message GreetMessage {
    string msg = 1;
}

// message Message {
//     string from = 1;
//     string content = 2;
//     google.protobuf.Timestamp created_at = 3;
// }

// message GetMessageStreamResponse {
//     Message message = 1;
// }

// message CreateMessageRequest {
//     Message message = 1;
// }

// message CreateMessageResponse {
//     string result = 1;
// }
